adjusting template file

--- a/template.yml
+++ b/template.yml
@@ -1,33 +1,42 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: EC2 instance with Apache web server
+Description: EC2 with Apache and region-specific VPC + Security Group
 
-Parameters:
-  SecurityGroupId:
-    Description: Security Group ID that allows HTTP (80) and SSH (22)
-    Type: AWS::EC2::SecurityGroup::Id
-
-Mappings: 
-  RegionMap: 
-    us-east-1: 
-      AMI: ami-0532be01f26a3de55
-    us-west-1: 
-      AMI: ami-0993d3759749c153c
-
-  RegionSubnetMap:
+Mappings:
+  RegionMap:
     us-east-1:
+      AMI: ami-0532be01f26a3de55
+      VpcId: vpc-0aaa1111aaaa1111
       SubnetId: subnet-07af715769b426119
     us-west-1:
+      AMI: ami-0993d3759749c153c
+      VpcId: vpc-0bbb2222bbbb2222
       SubnetId: subnet-0efeff9d25d8d403f
 
 Resources:
+
+  WebServerSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Allow HTTP and SSH
+      VpcId: !FindInMap [RegionMap, !Ref "AWS::Region", VpcId]
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+
   WebServer:
     Type: AWS::EC2::Instance
     Properties:
       ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
       InstanceType: t2.micro
+      SubnetId: !FindInMap [RegionMap, !Ref "AWS::Region", SubnetId]
       SecurityGroupIds:
-        - !Ref SecurityGroupId
-      SubnetId: !FindInMap [RegionSubnetMap, !Ref "AWS::Region", SubnetId]
+        - !Ref WebServerSecurityGroup
       UserData:
         Fn::Base64: |
           #!/bin/bash
@@ -38,6 +47,6 @@ Resources:
           echo "NWUDO CHIKAEZE" > /var/www/html/index.html
 
 Outputs:
-  WebServerPublicIP:
+  InstancePublicIP:
     Description: Public IP address of the EC2 instance
     Value: !GetAtt WebServer.PublicIp
