--- a/template.yml
+++ b/template.yml
@@ -1,41 +1,52 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: EC2 with Apache and region-specific VPC + Security Group
+Description: EC2 instance with Apache, SSH access, and parameterized configuration
 
-Mappings:
-  RegionMap:
-    us-east-1:
-      AMI: ami-0532be01f26a3de55
-      VpcId: vpc-01c19dd73679be2d0
-      SubnetId: subnet-07af715769b426119
-    us-west-1:
-      AMI: ami-0993d3759749c153c
-      VpcId: vpc-090913e8e6e7fad83
-      SubnetId: subnet-0efeff9d25d8d403f
+Parameters:
+  InstanceType:
+    Description: EC2 instance type
+    Type: String
+    Default: t2.micro
+
+  KeyName:
+    Description: Name of an existing EC2 KeyPair to enable SSH access
+    Type: AWS::EC2::KeyPair::KeyName
+
+  SSHLocation:
+    Description: The IP address range that can be used to SSH to the EC2 instance
+    Type: String
+    MinLength: '9'
+    MaxLength: '18'
+    Default: 0.0.0.0/0
+    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
+    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x
+
+  ImageId:
+    Description: Amazon Linux 2 AMI ID
+    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
+    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
 
 Resources:
-
   WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Allow HTTP and SSH
-      VpcId: !FindInMap [RegionMap, !Ref "AWS::Region", VpcId]
+      GroupDescription: Enable HTTP access via port 80 and SSH access
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
+          FromPort: '80'
+          ToPort: '80'
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
+          FromPort: '22'
+          ToPort: '22'
+          CidrIp: !Ref SSHLocation
 
   WebServer:
     Type: AWS::EC2::Instance
     Properties:
-      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
-      InstanceType: t2.micro
-      SubnetId: !FindInMap [RegionMap, !Ref "AWS::Region", SubnetId]
-      SecurityGroupIds:
+      ImageId: !Ref ImageId
+      InstanceType: !Ref InstanceType
+      KeyName: !Ref KeyName
+      SecurityGroups:
         - !Ref WebServerSecurityGroup
       UserData:
         Fn::Base64: |
@@ -48,5 +59,5 @@ Resources:
 
 Outputs:
   InstancePublicIP:
-    Description: Public IP address of the EC2 instance
+    Description: Public IP address of the newly created EC2 instance
     Value: !GetAtt WebServer.PublicIp
