--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,7 +24,7 @@ phases:
       - echo === template test completed ===
       - echo === BUILD THE TEMPLATE ===
       - aws cloudformation package --template-file template.yml --s3-bucket fidelis-deployed-artifact-bucket --output-template-file build-artifact-us-east-1.yml --region us-east-1
-      - aws cloudformation package --template-file template.yaml --s3-bucket fidelis-deployed-artifact-bucket-uswest1 --output-template-file build-artifact-us-west-1.yml --region us-west-1
+      - aws cloudformation package --template-file template.yml --s3-bucket fidelis-deployed-artifact-bucket-uswest1 --output-template-file build-artifact-us-west-1.yml --region us-west-1
 
 
   post_build:
